test/should_fail/inh_006.grg
actions inh_006 using inh_model_006;

rule bla { pattern{} replace{} }
